--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "nit-blog-server",
   "version": "1.0.0",
   "description": "Express API server for NIT Blog",
-  "main": "src/app.js",
+  "main": "src/app.mjs",
   "scripts": {
-    "start": "node src/app.js",
-    "dev": "nodemon src/app.js",
+    "start": "node src/app.mjs",
+    "dev": "nodemon src/app.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,7 +17,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "helmet": "^8.1.0",
-    "morgan": "^1.10.1"
+    "morgan": "^1.10.1",
+    "pg": "^8.18.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
