--- a/vercel.json
+++ b/vercel.json
@@ -3,14 +3,14 @@
     "version": 2,
     "builds": [
       {
-        "src": "app.mjs",
+        "src": "src/app.mjs",
         "use": "@vercel/node"
       }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "app.mjs"
+        "dest": "src/app.mjs"
       }
     ]
   }
