--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^5.2.1",
     "helmet": "^8.1.0",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "pg": "^8.18.0"
   },
   "devDependencies": {
